
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ u64 ;
struct pvclock_shadow_time {int tsc_shift; int tsc_to_nsec_mul; scalar_t__ tsc_timestamp; } ;


 scalar_t__ native_read_tsc () ;
 scalar_t__ pvclock_scale_delta (scalar_t__,int ,int ) ;

__attribute__((used)) static u64 pvclock_get_nsec_offset(struct pvclock_shadow_time *shadow)
{
 u64 delta = native_read_tsc() - shadow->tsc_timestamp;
 return pvclock_scale_delta(delta, shadow->tsc_to_nsec_mul,
       shadow->tsc_shift);
}
