; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_pvclock.c_pvclock_get_nsec_offset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_pvclock.c_pvclock_get_nsec_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pvclock_shadow_time = type { i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.pvclock_shadow_time*)* @pvclock_get_nsec_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @pvclock_get_nsec_offset(%struct.pvclock_shadow_time* %0) #0 {
  %2 = alloca %struct.pvclock_shadow_time*, align 8
  %3 = alloca i64, align 8
  store %struct.pvclock_shadow_time* %0, %struct.pvclock_shadow_time** %2, align 8
  %4 = call i64 (...) @native_read_tsc()
  %5 = load %struct.pvclock_shadow_time*, %struct.pvclock_shadow_time** %2, align 8
  %6 = getelementptr inbounds %struct.pvclock_shadow_time, %struct.pvclock_shadow_time* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = sub nsw i64 %4, %7
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load %struct.pvclock_shadow_time*, %struct.pvclock_shadow_time** %2, align 8
  %11 = getelementptr inbounds %struct.pvclock_shadow_time, %struct.pvclock_shadow_time* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.pvclock_shadow_time*, %struct.pvclock_shadow_time** %2, align 8
  %14 = getelementptr inbounds %struct.pvclock_shadow_time, %struct.pvclock_shadow_time* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i64 @pvclock_scale_delta(i64 %9, i32 %12, i32 %15)
  ret i64 %16
}

declare dso_local i64 @native_read_tsc(...) #1

declare dso_local i64 @pvclock_scale_delta(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
